--- a/Languages/Russian/DefInjected/XmlExtensions.SettingsMenuDef/Settings_main.xml
+++ b/Languages/Russian/DefInjected/XmlExtensions.SettingsMenuDef/Settings_main.xml
@@ -20,6 +20,9 @@
   <Watcher_Content_Settings.settings.22.label>Добавляем пересадку органов и импланты для андроидов?</Watcher_Content_Settings.settings.22.label>
   <Watcher_Content_Settings.settings.23.label>Добавление радиоактивного излучения вокруг РИТЭГа?</Watcher_Content_Settings.settings.23.label>
   <Watcher_Content_Settings.settings.24.label>Добавляет разнообразие в чайную продукцию(По рецептам Деда)?</Watcher_Content_Settings.settings.24.label>
-  <Watcher_Content_Settings.settings.28.text>Для применения всех параметров требуется перезагрузка</Watcher_Content_Settings.settings.28.text>
+  <Watcher_Content_Settings.settings.26.text>!☠!Тестовые функции, которые могут быть удалены из сборки!☠!</Watcher_Content_Settings.settings.26.text>
+  <Watcher_Content_Settings.settings.27.label>Добавить отказ киберимплантатов и их лечение?</Watcher_Content_Settings.settings.27.label>
+  <Watcher_Content_Settings.settings.31.text>Для применения всех параметров требуется перезагрузка</Watcher_Content_Settings.settings.31.text>
+
 
 </LanguageData>
