--- a/Languages/Russian/DefInjected/HediffDef/Hediffs_Global_Misc.xml
+++ b/Languages/Russian/DefInjected/HediffDef/Hediffs_Global_Misc.xml
@@ -31,5 +31,9 @@
   <Carpet_Bite.description>Меня что, укусил ковер? Нет, но лучше ускориться.</Carpet_Bite.description>
   <Carpet_Bite.labelNoun>Странный укус</Carpet_Bite.labelNoun>
 
+  <BeeBite.label>Пчелиный укус</BeeBite.label>
+  <BeeBite.description>Что меня укусило? Это что пчёлы? Лучше ускориться.</BeeBite.description>
+  <BeeBite.labelNoun>Пчелиный укус</BeeBite.labelNoun>
+
 
 </LanguageData>
