--- a/Languages/Russian/DefInjected/XmlExtensions.SettingsMenuDef/Settings_main.xml
+++ b/Languages/Russian/DefInjected/XmlExtensions.SettingsMenuDef/Settings_main.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
 
-  <Watcher_Content_Settings.label>Watcher Content Settings</Watcher_Content_Settings.label>
+  <Watcher_Content_Settings.label>Watcher Content Настройки</Watcher_Content_Settings.label>
   <Watcher_Content_Settings.settings.1.text>Возможности</Watcher_Content_Settings.settings.1.text>
   <Watcher_Content_Settings.settings.2.label>Добавляем алкоголь в рецепты крафта медикаментов?</Watcher_Content_Settings.settings.2.label>
   <Watcher_Content_Settings.settings.3.label>Добавляем извлечение гемогена  из трупов?</Watcher_Content_Settings.settings.3.label>
@@ -20,9 +20,11 @@
   <Watcher_Content_Settings.settings.22.label>Добавляем пересадку органов и импланты для андроидов?</Watcher_Content_Settings.settings.22.label>
   <Watcher_Content_Settings.settings.23.label>Добавление радиоактивного излучения вокруг РИТЭГа?</Watcher_Content_Settings.settings.23.label>
   <Watcher_Content_Settings.settings.24.label>Добавляет разнообразие в чайную продукцию(По рецептам Деда)?</Watcher_Content_Settings.settings.24.label>
-  <Watcher_Content_Settings.settings.26.text>!☠!Тестовые функции, которые могут быть удалены из сборки!☠!</Watcher_Content_Settings.settings.26.text>
-  <Watcher_Content_Settings.settings.27.label>Добавить отказ киберимплантатов и их лечение?</Watcher_Content_Settings.settings.27.label>
-  <Watcher_Content_Settings.settings.31.text>Для применения всех параметров требуется перезагрузка</Watcher_Content_Settings.settings.31.text>
+  <Watcher_Content_Settings.settings.25.label>Добавляем медоносное дерево?</Watcher_Content_Settings.settings.25.label>
+  <Watcher_Content_Settings.settings.27.text>!☠!Тестовые функции, которые могут быть удалены из сборки!☠!</Watcher_Content_Settings.settings.27.text>
+  <Watcher_Content_Settings.settings.28.label>Добавить отказ киберимплантатов и их лечение?</Watcher_Content_Settings.settings.28.label>
+  <Watcher_Content_Settings.settings.32.text>Для применения всех параметров требуется перезагрузка</Watcher_Content_Settings.settings.32.text>
+
 
 
 </LanguageData>
