--- a/Languages/English/DefInjected/ThingDef/Buildings_Accessories.xml
+++ b/Languages/English/DefInjected/ThingDef/Buildings_Accessories.xml
@@ -42,5 +42,8 @@
   <icecreamBasin.label>Ice cream machine</icecreamBasin.label>
   <icecreamBasin.description>Freezer machine.</icecreamBasin.description>
 
+  <YadaritLamp2A.label>Кристальная Лампа</YadaritLamp2A.label>
+  <YadaritLamp2A.description>Светяшийся кристал в резной оболочке.</YadaritLamp2A.description>
+
 
 </LanguageData>
