--- a/Languages/English/DefInjected/XmlExtensions.SettingsMenuDef/Settings_main.xml
+++ b/Languages/English/DefInjected/XmlExtensions.SettingsMenuDef/Settings_main.xml
@@ -21,11 +21,13 @@
   <Watcher_Content_Settings.settings.23.label>Adding Rimatomics RTG Radiation ?</Watcher_Content_Settings.settings.23.label>
   <Watcher_Content_Settings.settings.24.label>Adding variety to tea products?</Watcher_Content_Settings.settings.24.label>
   <Watcher_Content_Settings.settings.25.label>Adding a honey tree?</Watcher_Content_Settings.settings.25.label>
-  <Watcher_Content_Settings.settings.27.text>Test functions that may be removed from the build</Watcher_Content_Settings.settings.27.text>
-  <Watcher_Content_Settings.settings.28.label>Adding cyber implant failure and treatment ?</Watcher_Content_Settings.settings.28.label>
+  <Watcher_Content_Settings.settings.26.label>Add recipes for processing yadarite into metal or glowstone?</Watcher_Content_Settings.settings.26.label>
+  <Watcher_Content_Settings.settings.28.text>Test functions that may be removed from the build</Watcher_Content_Settings.settings.28.text>
   <Watcher_Content_Settings.settings.32.text>All options require restart to apply</Watcher_Content_Settings.settings.32.text>
 
 
+  <!--<Watcher_Content_Settings.settings.27.text>Test functions that may be removed from the build</Watcher_Content_Settings.settings.27.text>-->
+  <!--<Watcher_Content_Settings.settings.28.label>Adding cyber implant failure and treatment ?</Watcher_Content_Settings.settings.28.label>-->
   <!--<Watcher_Content_Settings.settings.26.text>Test functions that may be removed from the build</Watcher_Content_Settings.settings.26.text>-->
   <!--<Watcher_Content_Settings.settings.27.label>Adding cyber implant failure and treatment ?</Watcher_Content_Settings.settings.27.label>-->
   <!--<Watcher_Content_Settings.settings.31.text>All options require restart to apply</Watcher_Content_Settings.settings.31.text>-->
