--- a/Languages/Russian/DefInjected/ThingDef/Buildings_Accessories.xml
+++ b/Languages/Russian/DefInjected/ThingDef/Buildings_Accessories.xml
@@ -42,5 +42,8 @@
   <icecreamBasin.label>Автомат с мороженым</icecreamBasin.label>
   <icecreamBasin.description>Морозильный автомат.</icecreamBasin.description>
 
+  <YadaritLamp2A.label>Кристальная Лампа</YadaritLamp2A.label>
+  <YadaritLamp2A.description>Светяшийся кристал в резной оболочке.</YadaritLamp2A.description>
+
 
 </LanguageData>
